--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -87,6 +87,27 @@
 
 }
 
+
+
+.video-container {
+    position: relative;
+    width: 20%;
+    padding-bottom: 56.25%;
+}
+
+
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+
+
+
+  
 $scroll_offset : 2em;
 h1:before, .anchor:before { 
     content: ''; 
