--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -95,7 +95,14 @@
 }
 
 
-
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20%;
+    height: 20%;
+    border: 0;
+  }
 
 
   
