--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -109,7 +109,12 @@ h1:before, .anchor:before {
 
 
 .video {
-    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
   }
 
 .video-container {
