--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,6 @@
+---
+---
+
 /*
  *    Minimal Mistakes Jekyll Theme
  *
@@ -104,7 +107,3 @@ h1:before, .anchor:before {
     background-color: #00369f;
     font-size: .8em;
 }
-
-
-
-
