--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -107,3 +107,20 @@ h1:before, .anchor:before {
     background-color: #00369f;
     font-size: .8em;
 }
+
+
+.video-container {
+    position: relative;
+    width: 10%;
+    padding-bottom: 56.25%;
+  }
+
+
+  .video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
