--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -111,7 +111,8 @@ h1:before, .anchor:before {
 
 .video-container {
     position: relative;
-    width: 10%;
+    width: 160; 
+    height: 90;
     padding-bottom: 56.25%;
   }
 
