--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -111,17 +111,13 @@ h1:before, .anchor:before {
 
 .video-container {
     position: relative;
-    width: 160; 
-    height: 90;
-    padding-bottom: 56.25%;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
   }
-
-
-  .video {
+  .video-container iframe {
     position: absolute;
     top: 0;
     left: 0;
-    width: 20%;
-    height: 20%;
-    border: 0;
+    width: 100%;
+    height: 100%;
   }
