--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -121,3 +121,8 @@ h1:before, .anchor:before {
     width: 10%;
     height: 10%;
   }
+
+
+.video640 {width: 640px; height: 385px}
+.video560 {width: 560px; height: 340px}
+.video480 {width: 480px; height: 385px}
