--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -108,24 +108,21 @@ h1:before, .anchor:before {
     font-size: .8em;
 }
 
-
-.video-container {
+.auto-resizable-iframe {
+    max-width: 420px;
+    margin: 0px auto;
+  }
+  
+  .auto-resizable-iframe > div {
     position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    height: 20;
+    padding-bottom: 75%;
+    height: 0px;
   }
-  .video-container iframe {
+  
+  .auto-resizable-iframe iframe {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 10%;
-    height: 10%;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
   }
-
-
-
-
-
-.video640 {width: 230px; height: 197px}
-.video560 {width: 230px; height: 170px}
-.video480 {width: 240px; height: 193px}
