--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,6 +40,8 @@
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
 
+@import "video"
+
 .paper-box {
     display: flex;
     justify-content: left;
