--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,7 +40,7 @@
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
 
-@import "video"
+@import "video";
 
 .paper-box {
     display: flex;
