--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -110,21 +110,15 @@ h1:before, .anchor:before {
     font-size: .8em;
 }
 
-.auto-resizable-iframe {
-    max-width: 200px;
-    margin: 0px auto;
-  }
-  
-  .auto-resizable-iframe > div {
+.video-container {
     position: relative;
-    padding-bottom: 75%;
-    height: 0px;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
   }
-  
-  .auto-resizable-iframe iframe {
+  .video-container iframe {
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
   }
