--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -110,15 +110,21 @@ h1:before, .anchor:before {
     font-size: .8em;
 }
 
-.video-container {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    height: 0;
+.auto-resizable-iframe {
+    max-width: 200px;
+    margin: 0px auto;
   }
-  .video-container iframe {
+  
+.auto-resizable-iframe > div {
+    position: relative;
+    padding-bottom: 75%;
+    height: 0px;
+  }
+  
+.auto-resizable-iframe iframe {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 0px;
+    left: 0px;
     width: 100%;
     height: 100%;
   }
