--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,7 +40,6 @@
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
 
-@import "video";
 
 .paper-box {
     display: flex;
@@ -110,3 +109,21 @@ h1:before, .anchor:before {
     font-size: .8em;
 }
 
+.auto-resizable-iframe {
+    max-width: 200px;
+    margin: 0px auto;
+  }
+  
+.auto-resizable-iframe > div {
+    position: relative;
+    padding-bottom: 75%;
+    height: 0px;
+  }
+  
+.auto-resizable-iframe iframe {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+  }
