--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -111,7 +111,7 @@ h1:before, .anchor:before {
 }
 
 .auto-resizable-iframe {
-    max-width: 400;
+    max-width: 800px;
     margin: 0px auto;
   }
   
