--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -117,7 +117,7 @@ h1:before, .anchor:before {
     margin: 0px auto;
   }
   
-.auto-resizable-iframe > div {
+.auto-resizable-iframe {
     position: relative;
     padding-bottom: 75%;
     height: 0px;
