--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -144,3 +144,8 @@ h1:before, .anchor:before {
     width: 10%;
     height: 10%;
   }
+
+
+  .video640 {width: 230px; height: 197px}
+  .video560 {width: 230px; height: 170px}
+  .video480 {width: 240px; height: 193px}
