--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -113,22 +113,22 @@ h1:before, .anchor:before {
 }
 
 .auto-resizable-iframe {
-    max-width: 100;
+    max-width: 420px;
     margin: 0px auto;
   }
   
-.auto-resizable-iframe {
+  .auto-resizable-iframe > div {
     position: relative;
     padding-bottom: 75%;
     height: 0px;
   }
   
-.auto-resizable-iframe iframe {
+  .auto-resizable-iframe iframe {
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 10%;
-    height: 10%;
+    width: 100%;
+    height: 100%;
   }
 
 
